left aligned posts and fixed up Links

--- a/frontend/blog/src/sidebar.css
+++ b/frontend/blog/src/sidebar.css
@@ -20,7 +20,7 @@ html{
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
   border: solid 1px #e8e8e8;
   padding: 10px;
-  margin: 0 auto 30px auto;
+  margin: 0 0 30px 0;
   text-overflow: ellipsis;
   overflow: hidden;
   position: relative;
